--- a/views/Users/cart-page.html
+++ b/views/Users/cart-page.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="Template Mo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
     <title>Education Template - Meeting Detail Page</title>
 
@@ -156,10 +158,12 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
+                  
                   <div class="modal-header">
-                    <h5 class="modal-title" id="checkoutModalLabel">Payment Checkout</h5>
+                    <h4 class="modal-title" id="checkoutModalLabel">Payment Checkout</h4>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
+
                   <div class="modal-body">
                     <form id="paymentForm">
                       <!-- Payment Method Dropdown -->
@@ -257,6 +261,12 @@ https://templatemo.com/tm-569-edu-meeting
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
+
+        <!-- Bootstrap JS and dependencies (Popper.js and jQuery) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
+
     <script>
         //according to loftblog tut
         $('.nav li:first').addClass('active');
@@ -302,12 +312,14 @@ https://templatemo.com/tm-569-edu-meeting
         $(window).scroll(function () {
           checkSection();
         });
-        // Show the modal when the "Check out now!" button is clicked
+
+
+                // Show the modal when the "Check out now!" button is clicked
         const checkoutButton = document.getElementById('checkoutButton');
         const checkoutModal = new bootstrap.Modal(document.getElementById('checkoutModal'));
 
         checkoutButton.addEventListener('click', function() {
-        checkoutModal.show();
+          checkoutModal.show();
         });
 
         // Hide the credit card fields initially, show them when "Credit Card" is selected
