--- a/views/Users/Courses.html
+++ b/views/Users/Courses.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-569-edu-meeting
                           </li>
                           <li><a href="cart-page.html">Cart</a></li> 
 
-                          <li><a href="index.html">My Profile</a></li> 
+                          <li><a href="profile.html">My Profile</a></li> 
                           
                           <li><a href="index.html">Sign out</a></li> 
 
