--- a/views/Users/InsideCourse.html
+++ b/views/Users/InsideCourse.html
@@ -49,7 +49,7 @@
                         </li>
                         <li><a href="cart-page.html">Cart</a></li> 
 
-                        <li><a href="index.html">My Profile</a></li> 
+                        <li><a href="profile.html">My Profile</a></li> 
                         
                         <li><a href="index.html">Sign out</a></li> 
 
