--- a/views/Users/cart-page.html
+++ b/views/Users/cart-page.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-569-edu-meeting
                               </ul>
                           </li>
                           <li><a href="cart-page.html" class="active">My Cart</a></li> 
-                          <li><a href="Courses.html">My Profile</a></li> 
+                          <li><a href="profile.html">My Profile</a></li> 
                           <li><a href="index.html">Sign Out</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
