--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -47,7 +47,7 @@
                         </li>
                         <li><a href="cart-page.html">Cart</a></li> 
 
-                        <li><a href="index.html">My Profile</a></li> 
+                        <li><a href="profile.html">My Profile</a></li> 
                         
                         <li><a href="index.html">Sign out</a></li> 
 
