--- a/views/Users/profile.html
+++ b/views/Users/profile.html
@@ -14,15 +14,14 @@
     <!-- Bootstrap core CSS -->
     <link href="../../public/css/user css/bootstrap.min.css" rel="stylesheet">
 
-
     <!-- Bootstrap CSS (Make sure this is included) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Bootstrap JS (with bundle including Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-
-
+    <!-- Public files (CSS)! -->
+    <link href="../../public/css/user css/profile.css" rel="stylesheet">
 
 
 
@@ -38,67 +37,7 @@ TemplateMo 569 Edu Meeting
 https://templatemo.com/tm-569-edu-meeting
 
 -->
-    <style>
-        .apply-now .container {
-            display: flex;
-            justify-content: center;
-        }
 
-        .nav-tabs .nav-link {
-            color: black;
-            font-weight: 400;
-        }
-
-        .nav-tabs .nav-link.active {
-            color: #f5a425;
-            font-weight: 400;
-
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section label {
-            font-size: 20px;
-            ;
-            color: black;
-            font-weight: 400px;
-            margin-bottom: 10px;
-        }
-
-
-        .checkbox-group {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
-
-        .checkbox-group input[type="checkbox"] {
-            display: none;
-        }
-
-        .checkbox-group label {
-            background-color: #f0f0f0;
-            padding: 8px 16px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .checkbox-group input[type="checkbox"]:checked+label {
-            background-color: #f5a425;
-            color: white;
-        }
-
-        .checkbox-group label:hover {
-            background-color: #e0e0e0;
-        }
-
-        .checkbox-group input[type="checkbox"]:checked+label:hover {
-            background-color: #f5a425;
-        }
-    </style>
 </head>
 
 <body>
@@ -116,7 +55,7 @@ https://templatemo.com/tm-569-edu-meeting
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="Courses.html" class="active">My Courses</a></li>
+                            <li><a href="Courses.html">My Courses</a></li>
                             <li class="has-sub">
                                 <a href="javascript:void(0)">Meetings</a>
                                 <ul class="sub-menu">
@@ -126,7 +65,7 @@ https://templatemo.com/tm-569-edu-meeting
                             </li>
                             <li><a href="cart-page.html">Cart</a></li>
 
-                            <li><a href="profile.html">My Profile</a></li>
+                            <li><a href="profile.html" class="active">My Profile</a></li>
 
                             <li><a href="index.html">Sign out</a></li>
 
@@ -143,9 +82,9 @@ https://templatemo.com/tm-569-edu-meeting
 
     <section class="apply-now" id="apply">
 
-        <div class="container">
+        <div class="container" style="margin-top: 70px;">
             <div class="row">
-                <div class="col-lg-6" style="background-color:white; width:280px;height:330px;">
+                <div class="col-lg-6" style="background-color:white; width:340px;height:330px;margin-left: 10px; margin-bottom: 10px;">
 
                     <div class="item" style="text-align:center; height:320px; background-color: white;">
                         <div class="profile-img" style="text-align: center; margin-right:12px;">
@@ -172,7 +111,7 @@ https://templatemo.com/tm-569-edu-meeting
 
 
                 <!-- info here -->
-                <div class="col-lg-6" style="width:900px;">
+                <div class="col-lg-6">
                     <div class="item">
                         <!-- Tabs for User Info Section -->
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -199,12 +138,12 @@ https://templatemo.com/tm-569-edu-meeting
                                 aria-labelledby="basicInfo-tab">
                                 <div class="row" style="margin-top: 20px;">
                                     <!-- Name Input -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="name">Name</label>
                                         <input type="text" id="name" class="form-control" value="Nouran Hassan">
                                     </div>
                                     <!-- Email Input -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="email">Email</label>
                                         <input type="email" id="email" class="form-control"
                                             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
@@ -214,7 +153,7 @@ https://templatemo.com/tm-569-edu-meeting
                                         </div>
                                     </div>
                                     <!-- Phone input dropdown-->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="phone">Phone</label>
                                         <div class="input-group">
                                             <select class="form-select" id="phoneCode">
@@ -233,7 +172,7 @@ https://templatemo.com/tm-569-edu-meeting
                                     </div>
 
                                     <!-- University Dropdown -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="university">University</label>
                                         <select id="university" class="form-select">
                                             <option value="MIU">Misr International University</option>
@@ -243,7 +182,7 @@ https://templatemo.com/tm-569-edu-meeting
                                         </select>
                                     </div>
                                     <!-- Degree Program Dropdown -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="degreeProgram">Degree Program</label>
                                         <select id="degreeProgram" class="form-select">
                                             <option value="Bachelors">Bachelor's</option>
@@ -253,7 +192,7 @@ https://templatemo.com/tm-569-edu-meeting
                                         </select>
                                     </div>
                                     <!-- Major Input -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="major">Major</label>
                                         <select id="major" class="form-select">
                                             <option value="Computer Science">Computer Science</option>
@@ -265,7 +204,7 @@ https://templatemo.com/tm-569-edu-meeting
                                         </select>
                                     </div>
                                     <!-- Location Dropdown for Country -->
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <label for="location">Location</label>
                                         <select id="location" class="form-select">
                                             <option value="Cairo, Egypt">Cairo, Egypt</option>
@@ -423,10 +362,10 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
         </div>
         <div class="footer">
-            <p>Copyright © 2024 MEGAMINDS. All Rights Reserved. 
-              </p>
-          </div>
-        </section>
+            <p>Copyright © 2024 MEGAMINDS. All Rights Reserved.
+            </p>
+        </div>
+    </section>
     </section>
 
 
@@ -443,127 +382,10 @@ https://templatemo.com/tm-569-edu-meeting
     <script src="../../public/js/user js/video.js"></script>
     <script src="../../public/js/user js/slick-slider.js"></script>
     <script src="../../public/js/user js/custom.js"></script>
-    <script>
-        /* triggering edit btn + img input + validation for file type and uploading the img (changing src img) */
-        document.getElementById('edit-img-btn').onclick = () => document.getElementById('profileImage').click();
-        document.getElementById('profileImage').addEventListener('change', function (event) {
-            const file = event.target.files[0];
-            const reader = new FileReader();
-            // Check if file is an image
-            if (file && file.type.startsWith('image/')) {
-                reader.onload = function (e) {
-                    document.getElementById('profile-img').src = e.target.result;
-                };
-                reader.readAsDataURL(file);
-            } else {
-                const errorMessage = document.getElementById('error-image-message');
-                errorMessage.textContent = 'Invalid file type (PNG,JPEG,JPG)';
-                errorMessage.style.display = 'block';
-                setTimeout(function () {
-                    errorMessage.style.display = 'none';
-                }, 4000);
-            }
 
-        });
+    <!-- Public files (JS)! -->
+    <script src="../../public/js/user js/profile.js"></script>
 
-        /* save changed info + reset recenlty added info */
-
-        const initialValues = {
-            name: document.getElementById('name').value,
-            email: document.getElementById('email').value,
-            phoneCode: document.getElementById('phoneCode').value,
-            phone: document.getElementById('phone').value,
-            university: document.getElementById('university').value,
-            degreeProgram: document.getElementById('degreeProgram').value,
-            major: document.getElementById('major').value,
-            location: document.getElementById('location').value,
-            labelName: document.getElementById('label-name').innerText
-        };
-
-        document.getElementById('resetChanges').addEventListener('click', () => {
-            document.getElementById('name').value = initialValues.name;
-            document.getElementById('email').value = initialValues.email;
-            document.getElementById('phoneCode').value = initialValues.phoneCode;
-            document.getElementById('phone').value = initialValues.phone;
-            document.getElementById('university').value = initialValues.university;
-            document.getElementById('degreeProgram').value = initialValues.degreeProgram;
-            document.getElementById('major').value = initialValues.major;
-            document.getElementById('location').value = initialValues.location;
-        });
-        document.getElementById('saveChanges').addEventListener('click', () => {
-            initialValues.name = document.getElementById('name').value;
-            document.getElementById('label-name').innerText = initialValues.name;
-            initialValues.email = document.getElementById('email').value;
-            initialValues.phoneCode = document.getElementById('phoneCode').value;
-            initialValues.phone = document.getElementById('phone').value;
-            initialValues.university = document.getElementById('university').value;
-            initialValues.degreeProgram = document.getElementById('degreeProgram').value;
-            initialValues.major = document.getElementById('major').value;
-            initialValues.location = document.getElementById('location').value;
-        });
-
-        function validateForm() {
-            let email = document.getElementById('email').value;
-            let phone = document.getElementById('phone').value;
-
-            let emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-            let phonePattern = /^\d{10}$/;
-
-            let emailErrorMessage = document.getElementById('error-email-message');
-            let phoneErrorMessage = document.getElementById('error-phone-message');
-
-            // Email validation
-            if (!emailPattern.test(email)) {
-                emailErrorMessage.textContent = 'Invalid email (e.g. name@domain.com)';
-                emailErrorMessage.style.display = 'block';
-                setTimeout(function () {
-                    emailErrorMessage.style.display = 'none';
-                }, 4000);
-            } else {
-                emailErrorMessage.style.display = 'none';
-            }
-
-            // Phone number validation
-            if (!phonePattern.test(phone)) {
-                phoneErrorMessage.textContent = 'Invalid phone number (e.g. 123 456 7890)';
-                phoneErrorMessage.style.display = 'block';
-                setTimeout(function () {
-                    phoneErrorMessage.style.display = 'none';
-                }, 4000);
-            } else {
-                phoneErrorMessage.style.display = 'none';
-            }
-
-        }
-
-        // Attach the validation to the "Save Changes" button
-        document.getElementById('saveChanges').addEventListener('click', function (event) {
-            event.preventDefault();  // Prevent the form from submitting
-            validateForm();
-        });
-
-
-        /* Tab Switching*/
-
-        document.addEventListener('DOMContentLoaded', function () {
-            var hash = window.location.hash;
-            if (hash) {
-                var tab = new bootstrap.Tab(document.querySelector(hash));
-                tab.show();
-            }
-        });
-
-        // Enable tab switching and update the URL when tabs are clicked
-        document.querySelectorAll('#myTab a').forEach(function (tab) {
-            tab.addEventListener('click', function (e) {
-                e.preventDefault();
-                var activeTab = new bootstrap.Tab(this);
-                activeTab.show();
-                window.location.hash = this.getAttribute('href');  // Update the URL hash
-            });
-        });
-
-    </script>
 
 </body>
 
