--- a/views/Users/profile.html
+++ b/views/Users/profile.html
@@ -44,6 +44,7 @@ https://templatemo.com/tm-569-edu-meeting
 
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
+
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -84,7 +85,8 @@ https://templatemo.com/tm-569-edu-meeting
 
         <div class="container" style="margin-top: 70px;">
             <div class="row">
-                <div class="col-lg-6" style="background-color:white; width:340px;height:330px;margin-left: 10px; margin-bottom: 10px;">
+                <div class="col-lg-6"
+                    style="background-color:white; width:340px;height:330px;margin-left: 10px; margin-bottom: 10px;">
 
                     <div class="item" style="text-align:center; height:320px; background-color: white;">
                         <div class="profile-img" style="text-align: center; margin-right:12px;">
