--- a/views/Users/index.html
+++ b/views/Users/index.html
@@ -247,95 +247,6 @@
       </div>
     </div>
   </section>
-
-  <!-- <section class="apply-now" id="apply">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 align-self-center">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="item">
-                <h3>APPLY FOR BACHELOR DEGREE</h3>
-                <p>You are allowed to use this edu meeting CSS template for your school or university or business. You can feel free to modify or edit this layout.</p>
-                <div class="main-button-red">
-                  <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
-              </div>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="item">
-                <h3>APPLY FOR BACHELOR DEGREE</h3>
-                <p>You are not allowed to redistribute the template ZIP file on any other template website. Please contact us for more information.</p>
-                <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a href="#contact">Join Us Now!</a></div>
-              </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="accordions is-first-expanded">
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>About Edu Meeting HTML Template</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p>If you want to get the latest collection of HTML CSS templates for your websites, you may visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">Too CSS website</a>. If you need a working contact form script, please visit <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more info.</p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>HTML CSS Bootstrap Layout</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p>Etiam posuere metus orci, vel consectetur elit imperdiet eu. Cras ipsum magna, maximus at semper sit amet, eleifend eget neque. Nunc facilisis quam purus, sed vulputate augue interdum vitae. Aliquam a elit massa.<br><br>
-                        Nulla malesuada elit lacus, ac ultricies massa varius sed. Etiam eu metus eget nibh consequat aliquet. Proin fringilla, quam at euismod porttitor, odio odio tempus ligula, ut feugiat ex erat nec mauris. Donec viverra velit eget lectus sollicitudin tincidunt.</p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion">
-                <div class="accordion-head">
-                    <span>Please tell your friends</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p>Ut vehicula mauris est, sed sodales justo rhoncus eu. Morbi porttitor quam velit, at ullamcorper justo suscipit sit amet. Quisque at suscipit mi, non efficitur velit.<br><br>
-                        Cras et tortor semper, placerat eros sit amet, porta est. Mauris porttitor sapien et quam volutpat luctus. Nullam sodales ipsum ac neque ultricies varius.</p>
-                    </div>
-                </div>
-            </article>
-            <article class="accordion last-accordion">
-                <div class="accordion-head">
-                    <span>Share this to your colleagues</span>
-                    <span class="icon">
-                        <i class="icon fa fa-chevron-right"></i>
-                    </span>
-                </div>
-                <div class="accordion-body">
-                    <div class="content">
-                        <p>Maecenas suscipit enim libero, vel lobortis justo condimentum id. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br><br>
-                        Sed eleifend metus sit amet magna tristique, posuere laoreet arcu semper. Nulla pellentesque ut tortor sit amet maximus. In eu libero ullamcorper, semper nisi quis, convallis nisi.</p>
-                    </div>
-                </div>
-            </article>
-        </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <section class="our-courses" id="courses">
     <div class="container">
       <div class="row">
@@ -838,112 +749,5 @@
   </div>
 </div>
 </body>
-<script>
-// Get the "Join Us Now!" button
-var joinButton = document.getElementById("join");
-
-// When the user clicks on the "Join Us Now!" button, show the sign-up modal
-joinButton.onclick = function() {
-    showSignUpModal();  // This will show the Sign-up form
-}
-// Get modal elements
-var loginModal = document.getElementById("loginModal");
-var signUpModal = document.getElementById("signUpModal");
-
-// Get the buttons/links that open the modals
-var openLoginModal = document.getElementById("openLoginModal");
-var openSignUpModal = document.getElementById("openSignUpModal");
-var openLoginModalFromSignUp = document.getElementById("openLoginModalFromSignUp");
-
-// Get the "Join Us Now!" button
-var joinButton = document.getElementById("join");
-
-// Get the <span> elements that close the modals
-var closeLogin = loginModal.getElementsByClassName("close")[0];
-var closeSignUp = signUpModal.getElementsByClassName("close")[0];
-
-// Function to show the login modal and hide the sign-up modal
-function showLoginModal() {
-    loginModal.style.display = "flex";
-    signUpModal.style.display = "none";
-}
-
-// Function to show the sign-up modal and hide the login modal
-function showSignUpModal() {
-    signUpModal.style.display = "flex";
-    loginModal.style.display = "none";
-}
-
-// When the user clicks on the "Sign in" link, show the login modal
-openLoginModal.onclick = function() {
-    showLoginModal();
-}
-
-// When the user clicks on the "Sign up" link, show the sign-up modal
-openSignUpModal.onclick = function() {
-    showSignUpModal();
-}
-
-// When the user clicks on "Sign in" from the sign-up modal, switch back to the login modal
-openLoginModalFromSignUp.onclick = function() {
-    showLoginModal();
-}
-
-// When the user clicks on the "Join Us Now!" button, show the sign-up modal
-joinButton.onclick = function() {
-    showSignUpModal();
-}
-
-window.onload = function() {
-    loginModal.style.display = "none";
-    signUpModal.style.display = "none";
-}
-// Optional: close modals when clicking the close buttons
-closeLogin.onclick = function() {
-    loginModal.style.display = "none";
-}
-
-closeSignUp.onclick = function() {
-    signUpModal.style.display = "none";
-}
-
-// Optional: close modals when clicking outside the modal
-window.onclick = function(event) {
-    if (event.target == loginModal) {
-        loginModal.style.display = "none";
-    }
-    if (event.target == signUpModal) {
-        signUpModal.style.display = "none";
-    }
-}
-// Close login modal when the user clicks on the close (x)
-closeLogin.onclick = function() {
-    loginModal.style.display = "none";
-}
-
-// Close sign-up modal when the user clicks on the close (x)
-closeSignUp.onclick = function() {
-    signUpModal.style.display = "none";
-}
-
-// Close modals if the user clicks outside of them
-window.onclick = function(event) {
-    if (event.target == loginModal) {
-        loginModal.style.display = "none";
-    }
-    if (event.target == signUpModal) {
-        signUpModal.style.display = "none";
-    }
-}
-
-// Function to toggle password visibility
-function togglePassword(id) {
-    var input = document.getElementById(id);
-    if (input.type === "password") {
-        input.type = "text";
-    } else {
-        input.type = "password";
-    }
-}
-</script>
+ <script src="../../public/js/user js/Signin_and_up.js"></script>
 </html>
