--- a/public/css/user css/signup_and_in.css
+++ b/public/css/user css/signup_and_in.css
@@ -176,3 +176,9 @@
     height: auto; /* Maintain aspect ratio */
     margin-right: 8px; /* Space between logo and text */
   }
+  .error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+    display: none;
+}
