--- a/views/Admins/admin-partials/header.html
+++ b/views/Admins/admin-partials/header.html
@@ -69,7 +69,7 @@
         margin-bottom: 10px;
       }
       .sidebar .nav-link.active {
-        background-color: #007bff;
+        background-color: #063913;
         color: white;
         border-radius: 5px;
       }
